Update JVMOptim.md